# dashboard_welfare

./: app.py  privacy_assistant.py  progetto.txt  pyproject.toml
datasets/: task.csv
static/css/: style.css
templates/: index.html  privacy.html
