[project]
name = "dashboard-tesi"
version = "0.1.0"
description = "Dashboard per la manipolazione di dati sensibili"
authors = [
    {name = "Matteo Sozzo"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
